[gd_scene load_steps=2 format=3 uid="uid://achievement_ui"]

[ext_resource type="Script" path="res://scripts/v4/AchievementUIV4.gd" id="1"]

[node name="AchievementUI" type="CanvasLayer"]
visible = false

[node name="Panel" type="Panel" parent="."]
offset_left = 200.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 550.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 490.0

[node name="Title" type="Label" parent="Panel/VBox"]
text = "ACHIEVEMENTS"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel/VBox"]
text = "0 / 25 Unlocked"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
offset_right = 380.0
offset_bottom = 400.0
size_flags_vertical = 3

[node name="AchievementList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Panel"]
offset_left = 320.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 40.0
text = "X"

[node name="UnlockNotification" type="PanelContainer" parent="."]
visible = false
offset_left = 250.0
offset_top = 100.0
offset_right = 550.0
offset_bottom = 200.0

[node name="VBox" type="VBoxContainer" parent="UnlockNotification"]
offset_left = 5.0
offset_top = 5.0
offset_right = 295.0
offset_bottom = 95.0

[node name="Label" type="Label" parent="UnlockNotification/VBox"]
text = "ACHIEVEMENT UNLOCKED!"
horizontal_alignment = 1

[node name="AchievementName" type="Label" parent="UnlockNotification/VBox"]
text = "Achievement Name"
horizontal_alignment = 1

[node name="Points" type="Label" parent="UnlockNotification/VBox"]
text = "+50 points"
horizontal_alignment = 1
